# std-execution

./: CMakeLists.txt  COPYRIGHT_NOTICE.md  DUALSTACK_NET26_TECHNICAL_BRIEF.md  DualStackNet26Config.cmake.in  FEATURE_STATUS.md  FEATURE_WISHLIST.md  MEDUSASERV_INTEGRATION.md  MEDUSA_INTEGRATION.md  PUBLICATION_READY.md  README.md  README_AMPHISBAENA.md  README_LEGACY.md  TESTING_VERIFICATION.md  build_and_test.bat  build_and_test.sh  build_windows.bat  build_wsl.sh  build_wsl_ubuntu.sh  build_wsl_ubuntu_standalone.sh  std_execution.code-workspace  stdexecution-techbrief.md  test_fix.cpp
build-ubuntu/: CMakeCache.txt  CTestTestfile.cmake  DualStackNet26Config.cmake  Makefile  cmake_install.cmake  libdualstack_net26.so.1  libdualstack_net26.so.1.0.0
build-ubuntu/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/: concurrent_dualstack_server.cpp  dualstack_signature_demo.cpp  secure_dualstack_server.cpp  server.cpp
include/dualstack_net26/: fix_format_header.h
include/dualstack_net26/network/: network_config.h  notifications.h  virtual_adapter.h
src/: main.cpp
src/async/: execution.cpp  execution.h
src/core/: acceptor.cpp  acceptor.h  ip_address.cpp  ip_address.h  ports.h  socket.cpp  socket.h
src/network/: async_connection_manager.cpp  async_connection_manager.h  network_config.cpp  notifications.cpp  virtual_adapter.cpp
src/performance/: optimization.cpp  optimization.h
src/reflect/: reflection.h
src/security/: adr_rdr.cpp  adr_rdr.h  security.cpp  security.h  signature_visualizer.cpp  signature_visualizer.h  tls_protocol.cpp  tls_protocol.h
tests/: CMakeLists.txt  test_framework.h  test_ip_address.h  test_main.cpp  test_performance.h  test_socket.h
